[fix]: global scrollbar style

--- a/src/renderer/src/styles/base.css
+++ b/src/renderer/src/styles/base.css
@@ -32,40 +32,3 @@
 [data-overlayscrollbars-viewport] {
   z-index: auto !important;
 }
-
-/* ::-webkit-scrollbar {
-  display: none;
-} */
-
-.scroll::-webkit-scrollbar {
-  background-color: transparent;
-  width: 5px;
-  z-index: 999999;
-}
-
-.scroll::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0.07);
-  border-radius: 9999px;
-}
-.scroll::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(0, 0, 0, 0.3);
-}
-
-.dark .scroll::-webkit-scrollbar-thumb {
-  background-color: rgba(255, 255, 255, 0.2);
-}
-
-.dark .scroll::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(255, 255, 255, 0.55);
-}
-
-main::-webkit-scrollbar {
-  display: none;
-}
-
-/* main::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0);
-}
-main:hover::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0.3);
-} */
