--- a/src/renderer/src/styles/scroll-bar.css
+++ b/src/renderer/src/styles/scroll-bar.css
@@ -18,3 +18,30 @@
   --os-handle-bg-hover: rgba(255, 255, 255, 0.55);
   --os-handle-bg-active: rgba(255, 255, 255, 0.66);
 }
+
+
+::-webkit-scrollbar {
+  background-color: transparent;
+  width: 5px;
+  z-index: 999999;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.07);
+  border-radius: 9999px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.dark ::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.dark ::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.55);
+}
+
+main::-webkit-scrollbar {
+  display: none;
+}
